[gd_scene load_steps=31 format=2]

[ext_resource path="res://Art/Cutscenes/moonlight-beach animation.png" type="Texture" id=1]
[ext_resource path="res://Scripts/End/End.gd" type="Script" id=2]
[ext_resource path="res://Art/Cutscenes/red-moonlight-beach animation.png" type="Texture" id=3]
[ext_resource path="res://Font/edit-undo/editundo.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 864, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 96, 54 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 1056, 0, 96, 54 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 1.5
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "red",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=26]
size = 90
extra_spacing_space = -7
font_data = ExtResource( 4 )

[node name="End" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -114, -14 )
script = ExtResource( 2 )

[node name="Sky" type="ColorRect" parent="."]
margin_left = -34.0
margin_top = -28.0
margin_right = 986.0
margin_bottom = 376.0
color = Color( 0.0666667, 0.0784314, 0.2, 1 )

[node name="Ground" type="ColorRect" parent="."]
margin_left = -34.0
margin_top = 376.0
margin_right = 976.0
margin_bottom = 560.0
color = Color( 0.796078, 0.643137, 0.443137, 1 )

[node name="Scenery" type="AnimatedSprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 11, 11 )
frames = SubResource( 13 )
animation = "red"
playing = true

[node name="Shake" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Rect" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Black" type="ColorRect" parent="."]
visible = false
margin_right = 960.0
margin_bottom = 542.0
color = Color( 0, 0, 0, 1 )

[node name="TheEnd" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 960.0
margin_bottom = 540.0
custom_colors/font_color = Color( 1, 0.615686, 0.137255, 1 )
custom_fonts/font = SubResource( 26 )
text = "THE END"
align = 1
valign = 1
autowrap = true

[node name="End" type="Timer" parent="."]
wait_time = 3.0

[node name="Label" type="Timer" parent="."]
one_shot = true

[node name="Label2" type="Timer" parent="."]
wait_time = 4.0

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 481, 271 )
current = true
zoom = Vector2( 0.01, 0.01 )

[connection signal="timeout" from="Shake" to="." method="_on_Shake_timeout"]
[connection signal="timeout" from="Rect" to="." method="_on_Rect_timeout"]
[connection signal="timeout" from="End" to="." method="_on_End_timeout"]
[connection signal="timeout" from="Label" to="." method="_on_Label_timeout"]
[connection signal="timeout" from="Label2" to="." method="_on_Label2_timeout"]
